--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,26 @@
     font-family: Roboto-Bold;
     box-sizing: border-box;
 }
+
+#display {
+    display: flex;
+    flex-direction: column;
+    width: 640px;
+    height: 640px;
+    border: 2px solid black;
+    font-size: 56px;
+
+}
+
+#display-history {
+    flex: 1;
+}
+#display-input {
+    min-height: 75px;
+    border: 2px solid black;
+    flex: 0;
+}
+
 #button-container {
     display: flex;
     flex-direction: column;
@@ -35,7 +55,7 @@ button.box {
     background-color: #3882f6;
     color: #f9faf8;
     border-radius: 10px;
-    font-size: 42px;
+    font-size: 56px;
     padding: 15px;
     margin: 0;
 }
@@ -49,7 +69,7 @@ button.hidden-box {
 
     background-color: white;
     border-radius: 10px;
-    font-size: 42px;
+    font-size: 56px;
     padding: 15px;
     margin: 0;
 }
