--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@ body {
 
 #display-history {
     flex: 1;
+    display: flex;
+    justify-content: end;
+    margin: 10px;
 }
 #display-input {
     min-height: 75px;
