--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,13 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    flex: 1;
+    margin: 0 15%;
 }
 #display {
     display: flex;
     flex-direction: column;
-    width: 640px;
+    
     height: 640px;
     border: 2px solid black;
     font-size: 56px;
@@ -40,7 +42,7 @@ body {
 #button-container {
     display: flex;
     flex-direction: column;
-    width: 640px;
+    
     height: 640px;
     border: 2px solid black;
 }
@@ -51,6 +53,8 @@ body {
     width: 300px;
     height: 300px;
     border: 2px solid black;
+    align-self: center;
+
 }
 
 .row {
