--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
 }
 #display-input {
     min-height: 75px;
-    border: 2px solid black;
+    border-top: 2px solid black;
     flex: 0;
 }
 
@@ -96,3 +96,44 @@ button.hidden-box {
     padding: 15px;
     margin: 0;
 }
+
+
+@media (min-width: 1000px) {
+    #columndiv {
+        max-width: 400px;
+
+    }
+
+    #display {
+        height: 300px;
+        font-size: 30px;
+    }
+
+    #display-input {
+        min-height: 40px;
+        padding-left: 2px;
+    }
+
+    #button-container {
+        
+        height: 250px;
+        
+    }
+    
+    #arrows-container {
+        height: 130px;    
+    }
+
+    button.box {
+        font-size: 24px;
+        padding: 5px;
+    }
+
+    button.hidden-box {
+        font-size: 24px;
+        padding: 5px;
+    }
+
+}
+
+
